Error handling for Java docs snippet